<resources>
    <string name="app_name">StoryAppSubmission</string>

    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>

    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="logout">Keluar</string>

    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="name">Nama</string>

    <string name="password_not_empty">Password tidak boleh kosong</string>
    <string name="email_not_empty">Email tidak boleh kosong</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="name_not_empty">Nama tidak boleh kosong</string>

    <string name="greeting">Hello %1$s,</string>
    <string name="create_post_text">Create your post today!</string>
    <string name="create_post">Create Post</string>

    <string name="user_name">user name</string>
    <string name="description">description</string>
    <string name="timestamp">timestamp</string>

    <string name="back">Back</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="upload_loc_info">Upload with location information</string>

    <string name="Logout">Logout</string>

    <string name="map">map</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="retry">Try again</string>
</resources>